feature - 上线过冒烟版本

--- a/public/index.html
+++ b/public/index.html
@@ -21,4 +21,7 @@
       document.getElementsByTagName('html')[0].style['font-size'] = '50%'
       console.log('看看', document.getElementsByTagName('html')[0].style)
     }
+    function handleImgClick(e) {
+      console.log('fuck', e)
+    }
   </script>
