--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <script src="https://gosspublic.alicdn.com/aliyun-oss-sdk-4.4.4.min.js"></script>
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>jsonote</title>
   </head>
@@ -18,10 +19,8 @@
 <script>
     let isPC = !(/Android|webOS|iPhone|iPod|BlackBerry/i.test(navigator.userAgent))
     if (!isPC) {
-      document.getElementsByTagName('html')[0].style['font-size'] = '50%'
-      console.log('看看', document.getElementsByTagName('html')[0].style)
+      //document.getElementsByTagName('html')[0].style['font-size'] = '60%'
     }
     function handleImgClick(e) {
-      console.log('fuck', e)
     }
   </script>
